tests/error/another_static_if_fail_check_that_is_just_not_supposed_to_assert.c
// fail "Expected ')' in '#if' argument."

#if (1

